--- a/css/style2.css
+++ b/css/style2.css
@@ -14,4 +14,20 @@ a {
 }
 img {
     border: 3px solid #000000;
+body {
+    background-color: #6F73D2;
+    margin: 0;
+}
+h1 {
+    color: #e63946;
+}
+p {
+    color: #EEC643;
+}
+a {
+    color: #04080F;
+    border-left: 6px solid #04080F;
+}
+img {
+    border: 3px solid #000000;
 }
